// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar render empty sidebar 1`] = `
<div
  class="sidebar"
>
  <navlinks-stub
    issidebar="true"
  />
    
  <!---->
   
</div>
`;

exports[`Sidebar render sidebar groups 1`] = `
<div
  class="sidebar"
>
  <navlinks-stub
    issidebar="true"
  />
    
  <ul
    class="sidebar-links"
  >
    <li>
      <sidebargroup-stub
        first="true"
        item="[object Object]"
        open="true"
      />
    </li>
    <li>
      <sidebarlink-stub
        item="[object Object]"
      />
    </li>
  </ul>
   
</div>
`;

exports[`Sidebar render sidebar items 1`] = `
<div
  class="sidebar"
>
  <navlinks-stub
    issidebar="true"
  />
    
  <ul
    class="sidebar-links"
  >
    <li>
      <sidebarlink-stub
        item="[object Object]"
      />
    </li>
    <li>
      <sidebarlink-stub
        item="[object Object]"
      />
    </li>
  </ul>
   
</div>
`;
